# parity-scale-codec

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.adoc  README.md  build.rs  config.toml  dummy.file  git.pach  go.mod  index.html  test-me
.github/: dependabot.yml
.github/workflows/: ci.yml  hugo.yaml  publish.yml  release-bot.yml
benches/: benches.rs
content/: _index.md  decode.md  encode.md  scale-crates.md  specification.md  use-in-substrate.md
derive/: Cargo.toml
derive-utils/: Cargo.toml
derive-utils/src/: lib.rs
derive/src/: decode.rs  encode.rs  lib.rs  max_encoded_len.rs  skip.rs  trait_bounds.rs  utils.rs
derive/tests/: mod.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
fuzzing/: Cargo.toml  README.md
fuzzing/src/: main.rs
io/: Cargo.toml
io/src/: lib.rs
src/: bit_vec.rs  bitvec.rs  bounded_encoded_length.rs  btree_utils.rs  codec.rs  compact.rs  const_encoded_len.rs  counted_input.rs  decode_all.rs  decode_finished.rs  depth_limit.rs  encode_append.rs  encode_like.rs  error.rs  generic_array.rs  impl_generic_array.rs  joiner.rs  keyedvec.rs  lib.rs  max_encoded_len.rs  mem_tracking.rs  memory_limit.rs  vec_array.rs
tests/: bitflags.rs  bounds.rs  chain-error.rs  clippy.rs  common.rs  full_error.rs  invalid_input_len.rs  max_encoded_len.rs  max_encoded_len_ui.rs  mem_tracking.rs  mock.rs  mod.rs  scale_codec_ui.rs  single_field_struct_encoding.rs  size_hint.rs  skip.rs  test_vectors.rs  type_inference.rs  variant_number.rs
tests/decode_with_mem_tracking_ui/: trait_bound_not_satisfied.rs
tests/max_encoded_len_ui/: crate_str.rs  crate_str.stderr  incomplete_attr.rs  incomplete_attr.stderr  list_list_item.rs  list_list_item.stderr  literal_list_item.rs  literal_list_item.stderr  missing_crate_specifier.rs  missing_crate_specifier.stderr  name_value_attr.rs  name_value_attr.stderr  name_value_list_item.rs  name_value_list_item.stderr  no_path_list_items.rs  no_path_list_items.stderr  not_encode.rs  not_encode.stderr  not_mel.rs  not_mel.stderr  path_attr.stderr  path_list_item.rs  path_list_item.stderr  two_path_list_items.rs  two_path_list_items.stderr  union.rs  union.stderr  unsupported_encoded_as_field.rs  unsupported_encoded_as_field.stderr  unsupported_field.rs  unsupported_field.stderr  unsupported_variant.rs  unsupported_variant.stderr
tests/max_encoded_len_ui/pass/: codec_crate.rs
tests/scale_codec_ui/: codec_discriminiant_variant_counted_in_default_index.rs  codec_discriminiant_variant_counted_in_default_index.stderr  codec_duplicate_index.rs  codec_duplicate_index.stderr  codec_invalid_index.rs  codec_invalid_index.stderr  discriminant_overflow.rs  discriminant_overflow.stderr  discriminant_variant_counted_in_default_index.stderr  duplicate_const_expr.rs  duplicate_const_expr.stderr  invalid_attr_name.rs  invalid_attr_name.stderr  invalid_attr_type.rs  invalid_attr_type.stderr  overflowing_index_value.rs  overflowing_index_value.stderr
tests/scale_codec_ui/fail/: codec_duplicate_index.stderr  discriminant_variant_counted_in_default_index.stderr
tests/scale_codec_ui/pass/: decode-no-implicit-prelude.rs  encode-no-implicit-prelude.rs
themes/hugo-book-master/layouts/partials/docs/inject/: head.html
themes/hugo-book-master/layouts/partials/helpers/: katex.html
themes/hugo-book-master/layouts/shortcodes/: fontawesome.html
