[package]
name = "jam-codec"
description = "Lightweight, efficient, binary codec for JAM"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
build = "build.rs"
rust-version.workspace = true

[dependencies]
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1.0.219", default-features = false, optional = true }
jam-codec-derive = { path = "derive", version = "=0.1.0", default-features = false, optional = true }
bitvec = { version = "1", default-features = false, features = ["alloc"], optional = true }
bytes = { version = "1", default-features = false, optional = true }
byte-slice-cast = { version = "1.2.3", default-features = false }
generic-array = { version = "0.14.7", optional = true }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
impl-trait-for-tuples = "0.2.3"
const_format = { version = "0.2.34" }

[dev-dependencies]
criterion = "0.5.1"
serde_derive = { version = "1.0" }
jam-codec-derive = { path = "derive", default-features = false }
quickcheck = "1.0"
proptest = "1.6.0"
trybuild = "1.0.104"
paste = "1"
hex = "0.4.3"
rustversion = "1"
enumflags2 = "0.7.11"

[build-dependencies]
rustversion = "1"

[[bench]]
name = "benches"
harness = false

[lib]
bench = false

[features]
default = ["std"]
derive = ["jam-codec-derive"]
std = ["serde/std", "bitvec?/std", "byte-slice-cast/std", "chain-error"]
bit-vec = ["bitvec"]
fuzz = ["std", "arbitrary"]

# Enables the new `MaxEncodedLen` trait.
# NOTE: This is still considered experimental and is exempt from the usual
# SemVer guarantees. We do not guarantee no code breakage when using this.
max-encoded-len = ["jam-codec-derive?/max-encoded-len"]

# Make error fully descriptive with chaining error message.
# Should not be used in a constrained environment.
chain-error = []

# This does not do anthing anymore. Remove with the next major release.
full = []

# Dump test vectors during testing
dump-test-vectors = []

[workspace]
members = ["derive", "fuzzer"]

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/jam-codec"
categories = ["encoding"]
edition = "2021"
rust-version = "1.79.0"
