[package]
name = "parity-scale-codec"
description = "SCALE - Simple Concatenating Aggregated Little Endians"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
build = "build.rs"
rust-version.workspace = true

[dependencies]
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1.0.228", default-features = false, optional = true }
parity-scale-codec-derive = { path = "derive", version = "=3.7.5", default-features = false, optional = true }
bitvec = { version = "1", default-features = false, features = ["alloc"], optional = true }
bytes = { version = "1", default-features = false, optional = true }
byte-slice-cast = { version = "1.2.3", default-features = false }
generic-array = { version = "1.3.3", optional = true }
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
impl-trait-for-tuples = "0.2.3"
const_format = { version = "0.2.35" }

[dev-dependencies]
criterion = "0.7.0"
serde_derive = { version = "1.0" }
parity-scale-codec-derive = { path = "derive", default-features = false }
quickcheck = "1.0"
proptest = "1.8.0"
trybuild = "1.0.111"
paste = "1"
rustversion = "1.0.6"
enumflags2 = "0.7.12"

[build-dependencies]
rustversion = "1.0.6"

[[bench]]
name = "benches"
harness = false

[lib]
bench = false

[features]
default = ["std"]
derive = ["parity-scale-codec-derive"]
std = ["serde/std", "bitvec?/std", "byte-slice-cast/std", "chain-error"]
bit-vec = ["bitvec"]
fuzz = ["std", "arbitrary"]

# Enables the new `MaxEncodedLen` trait.
# NOTE: This is still considered experimental and is exempt from the usual
# SemVer guarantees. We do not guarantee no code breakage when using this.
max-encoded-len = ["parity-scale-codec-derive?/max-encoded-len"]

# Make error fully descriptive with chaining error message.
# Should not be used in a constrained environment.
chain-error = []

# This does not do anthing anymore. Remove with the next major release.
full = []

[workspace]
members = ["derive", "fuzzer"]

[workspace.package]
version = "3.7.5"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/parity-scale-codec"
categories = ["encoding"]
edition = "2021"
rust-version = "1.79.0"
