[package]
name = "parity-scale-codec-derive"
description = "Serialization and deserialization derive macro for Parity SCALE Codec"
version = "3.6.12"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["full", "visit"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"
proc-macro-crate = "3.1.0"

[dev-dependencies]
parity-scale-codec = { path = "..", features = ["derive", "max-encoded-len"] }

[features]
# Enables the new `MaxEncodedLen` trait.
# NOTE: This is still considered experimental and is exempt from the usual
# SemVer guarantees. We do not guarantee no code breakage when using this.
max-encoded-len = []
