[package]
name = "parity-scale-codec-derive"
description = "Serialization and deserialization derive macro for Parity SCALE Codec"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
proc-macro-crate = "3.1.0"

[dev-dependencies]
parity-scale-codec = { path = "..", features = ["derive", "max-encoded-len"] }

[features]
# Enables the new `MaxEncodedLen` trait.
# NOTE: This is still considered experimental and is exempt from the usual
# SemVer guarantees. We do not guarantee no code breakage when using this.
max-encoded-len = []
