[package]
name = "codec-fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2018"
publish = false

[dependencies]
parity-scale-codec = { path = "../", features = [ "derive", "bit-vec", "fuzz" ] }
honggfuzz = "0.5.51"
arbitrary = { version = "0.4.1", features = ["derive"] }
bitvec = { version = "0.17.4", features = ["alloc"] }
