[package]
name = "jam-codec-fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2021"
publish = false

[dependencies]
jam-codec = { path = "..", features = ["derive", "bit-vec", "fuzz"] }
honggfuzz = "0.5.57"
arbitrary = { version = "1.4.2", features = ["derive"] }
bitvec = { version = "1", features = ["alloc"] }
